fixed scroll view. resize images that are too large...

--- a/Resources/MainWindow.xib
+++ b/Resources/MainWindow.xib
@@ -150,7 +150,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>UIApplication</string>
 					<string>UIResponder</string>
-					<string>JCODemoViewController</string>
+					<string>AngryNerdsViewController</string>
 					<string>{{803, 206}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>{{525, 346}, {320, 480}}</string>
