--- a/Classes/AngryNerdsViewController.xib
+++ b/Classes/AngryNerdsViewController.xib
@@ -275,7 +275,7 @@
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>JCODemoViewController</string>
+					<string>AngryNerdsViewController</string>
 					<string>UIResponder</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="0.0"/>
